--- a/migrations/Makefile
+++ b/migrations/Makefile
@@ -1,6 +1,6 @@
 migrationinit:
 	goose create todo sql	 
 mup:
-	goose postgres postgresql://postgres:1998@localhost:5432/postgres up
+	goose postgres postgresql://your user:your passw@localhost:5432/postgres up
 mdown:
-	goose postgres postgresql://postgres:1998@localhost:5432/postgres down
+	goose postgres postgresql://_:_@localhost:5432/postgres down
